# privacyguard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml  requirements.txt
.github/workflows/: changelog.yml  release.yml  test.yml
data/: patterns.json
docs/: screenshot-capture.md
packaging/: build_appimage.sh  build_deb.sh  postinst.sh  privacyguard.desktop
privacyguard/: __init__.py  main.py
privacyguard/config/: __init__.py  settings.py
privacyguard/engine/: __init__.py  custom.py  location.py  pii.py  redactor.py  secrets.py
privacyguard/ui/: __init__.py  preferences.py  system_integration.py  update_dialog.py  window.py
privacyguard/updater/: __init__.py  checker.py
tests/: corpus_samples.json  test_redactor.py  test_redactor_corpus.py
